avoid input box covering messages

--- a/static/chat.css
+++ b/static/chat.css
@@ -27,6 +27,7 @@ body {
   background-color: white;
   position: fixed;
   bottom: 0;
+  height: 1.75em;
 }
 
 #inbox > .message {
